--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>About Us</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>About us</h1>
-        <!-- Add something here to fix trademark -->
     <p>
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <a href="http://"><em>Learn Enough™ Git to Be Dangerous</em></a>.
